# sub-pal

./: .dockerignore  .env  .env.production  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  DOCKER.md  LICENSE.md  README.md  _typos.toml  cliff.toml
docker/: README.md
docker/backend/: Dockerfile
docker/compose/: docker-compose.prod.yml  docker-compose.yml
docker/config/: .env.docker  .env.prod.template
docker/frontend/: Dockerfile
docker/nginx/: nginx.conf
docker/scripts/: backup.sh  deploy-prod.sh
docs/: api-implementation.md  api.md
memory-bank/: .qa_validation_status  activeContext.md  complexity-analysis.md  implementation-plan.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  tasks.md  techContext.md
memory-bank/architecture/: api-endpoints.md  database-schema.md  frontend-components.md  implementation-plan.md  system-architecture.md
migrations/: 20240701000000_create_users_tables.sql  20250808100124_reset_users_tables.sql  20250808103307_create_users_tables.sql  20250809154917_create_subscription_table.sql  20250909000000_create_subscriptions_table.sql
scripts/apis/: backend.rest
scripts/docker/: start_postgres.sh
specs/: 001-prd.md  002-design-subscription-frontend.md
specs/creative/: 001-auth-ui.md
specs/issues/: 001-login-email.md  002-subscriptions.md  003-subscriptions-frontend.md  004-fix-register-ui.md
src/: main.rs
src/config/: database.rs  mod.rs
src/middleware/: logging.rs  mod.rs  rate_limit.rs  security.rs
src/models/: mod.rs  subscription.rs  user.rs
src/routes/: auth.rs  health.rs  mod.rs  subscriptions.rs  users.rs
src/services/: mod.rs  subscription_service.rs  user_service.rs
src/utils/: auth.rs  mod.rs  response.rs  subscription_validation.rs
ui/: .dockerignore  .env  .gitignore  TYPE_MIGRATION_SUMMARY.md  nginx.conf  package-lock.json  package.json  vite.config.prod.ts  vite.config.ts
ui/src/: App.tsx
ui/src/lib/: api.ts  (+7 more)
(+45 files in other folders)
